--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 			<div class="d1x1">
 				<h1 class="bracket">Games</h1>
 				<a href="http://www.gamersnet.nl/">Gamersnet</a> <br />
-				<a href="http:www.reddit.com/r/gaming/">/r/gaming</a> <br />
-				<a href="http:www.reddit.com/r/games/">/r/games</a> <br />
+				<a href="http://www.reddit.com/r/gaming/">/r/gaming</a> <br />
+				<a href="http://www.reddit.com/r/games/">/r/games</a> <br />
 				<a href="http://www.reddit.com/r/pcgaming/">/r/pcgaming</a> <br />
 			</div>
 			
