--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
 			
 			<div class="d1x1">
 				<h1 class="bracket">Misc</h1>
-				<a href="http://www.nederland.fm/">NL.fm</a> <br />
 				<a href="http://www.9292.nl/">9292</a> <br />
+				<a href="http://www.reddit.com/r/movies">Movies</a> <br />
+				<a href="http://www.reddit.com/r/television">Television</a> <br />
+				<a href="http://www.reddit.com/r/hiphopheads">Hiphopheads</a> <br />
 			</div>
 			
 			<div class="d1x1">
