--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
 		
 			<div class="d1x1">
 				<h1 class="bracket">Games</h1>
-				<a href="http://www.gamersnet.nl/">Gamersnet</a> <br />
-				<a href="http://www.reddit.com/r/gaming/">/r/gaming</a> <br />
-				<a href="http://www.reddit.com/r/games/">/r/games</a> <br />
+				<a href="http://www.gamersnet.nl/">FOK!Games</a> <br />
 				<a href="http://www.reddit.com/r/pcgaming/">/r/pcgaming</a> <br />
+				<a href="http://www.reddit.com/r/gaming/">/r/gaming</a> <br />
+				<a href="http://www.reddit.com/r/pcmasterrace/">/r/pcmasterrace</a> <br />
+				<a href="http://www.reddit.com/r/games/">/r/games</a> <br />
 			</div>
 			
 			<div class="d1x1">
@@ -89,13 +90,15 @@
 				<a href="http://www.reddit.com/r/movies">Movies</a> <br />
 				<a href="http://www.reddit.com/r/television">Television</a> <br />
 				<a href="http://www.reddit.com/r/hiphopheads">Hiphopheads</a> <br />
+				<a href="http://www.reddit.com/r/music/">Music</a> <br />
 			</div>
 			
 			<div class="d1x1">
 				<h1 class="bracket">Misc</h1>
 				<a href="http://www.google.com/">Google</a> <br />
 				<a href="http://www.tweakers.net/pricewatch">Pricewatch</a> <br />
-				<a href="http://battlelog.battlefield.com/">Battlelog</a>
+				<a href="http://www.reddit.com/r/gamedeals/">Gamedeals</a>
+				<a href="http://www.reddit.com/r/buildapcsales/">Buildapcsales</a>
 			</div>
 			
 			<div class="d2x1" id="todo">
@@ -110,8 +113,9 @@
 				<h1 class="bracket">Misc</h1>
 				<a href="http://www.reddit.com/r/leagueoflegends">League of Legends</a> <br />
 				<a href="http://reddit.com/r/globaloffensive/">Global Offensive</a> <br />
-				<a href="http://reddit.com/r/paydaytheheist/">Payday 2</a> <br />
-				<a href="http://reddit.com/r/diablo3/">Diablo 3</a> <br />
+				<a href="http://reddit.com/r/killingfloor/">Killing Floor</a> <br />
+				<a href="http://reddit.com/r/grandtheftautov/">GTA V</a> <br />
+				<a href="http://reddit.com/r/grandtheftautov_pc/">GTA V PC</a> <br />
 			</div>
 			
 			<div class="d1x1">
