--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 				<a href="http://www.soundcloud.com/">SoundCloud</a> <br />
 				<a href="https://twitter.com/"> Twitter</a> <br />
 				<a href="http://www.thepiratebay.se/">The Pirate Bay</a>
+				<a href="http://www.kat.ph/">Kickasstorrents
 			</div>
 			
 			<div class="d1x1">
@@ -97,8 +98,8 @@
 				<h1 class="bracket">Misc</h1>
 				<a href="http://www.google.com/">Google</a> <br />
 				<a href="http://www.tweakers.net/pricewatch">Pricewatch</a> <br />
-				<a href="http://www.reddit.com/r/gamedeals/">Gamedeals</a>
-				<a href="http://www.reddit.com/r/buildapcsales/">Buildapcsales</a>
+				<a href="http://www.reddit.com/r/gamedeals/">Gamedeals</a> <br />
+				<a href="http://www.reddit.com/r/buildapcsales/">Buildapcsales</a> <br />	
 			</div>
 			
 			<div class="d2x1" id="todo">
@@ -121,8 +122,10 @@
 			<div class="d1x1">
 				<h1 class="bracket">Technology</h1>
 				<a href="http://reddit.com/r/technology">Technology</a> <br />
-				<a href="http://reddit.com/r/android">Android</a> <br />
 				<a href="http://reddit.com/r/gadgets">Gadgets</a> <br />
+				<a href="http://reddit.com/r/android">Android</a> <br />
+				<a href="http://reddit.com/r/androidwear">Android Wear</a> <br />
+				<a href="http://reddit.com/r/lggwatch">LG G Watch</a> <br />
 			</div>
 			
 			<div class="d2x1">
