--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<a href="https://www.youtube.com/feed/subscriptions/">YouTube</a> <br />
 				<a href="http://www.soundcloud.com/">SoundCloud</a> <br />
 				<a href="https://twitter.com/"> Twitter</a> <br />
-				<a href="http://www.thepiratebay.se/">The Pirate Bay</a>
+				<a href="http://www.thepiratebay.se/">The Pirate Bay</a> <br />
 				<a href="http://www.kat.ph/">Kickasstorrents
 			</div>
 			
