--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 				<a href="http://www.reddit.com/r/movies">Movies</a> <br />
 				<a href="http://www.reddit.com/r/television">Television</a> <br />
 				<a href="http://www.reddit.com/r/hiphopheads">Hiphopheads</a> <br />
+				<a href="http://www.reddit.com/r/shield">Agents of S.H.I.E.L.D.</a> <br />
 				<a href="http://www.reddit.com/r/music/">Music</a> <br />
 			</div>
 
@@ -125,7 +126,6 @@
 				<a href="http://reddit.com/r/gadgets">Gadgets</a> <br />
 				<a href="http://reddit.com/r/android">Android</a> <br />
 				<a href="http://reddit.com/r/androidwear">Android Wear</a> <br />
-				<a href="http://reddit.com/r/lggwatch">LG G Watch</a> <br />
 			</div>
 
 			<div class="d2x1">
