--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
 
 			<div class="d1x1">
 				<h1 class="bracket">News</h1>
-				<a href="http://m.nos.nl/">NOS.nl</a> <br />
+				<a href="http://nos.nl/">NOS.nl</a> <br />
 				<a href="http://www.nu.nl/">nu.nl</a> <br />
-				<a href="http://fok.nl/">FOK!nl</a> <br />
 				<a href="http://www.tweakers.net/">Tweakers</a> <br />
 				<a href="http://www.reddit.com/r/news">News</a> <br/>
 				<a href="http://www.reddit.com/r/worldnews">Worldnews</a> <br />
@@ -63,7 +62,7 @@
 
 			<div class="d1x1">
 				<h1 class="bracket">HU</h1>
-				<a href="http://sharepoint.hu.nl">Sharepoint</a> <br />
+				<a href="https://mijn.sharepoint.hu.nl/Paginas/default.aspx">Sharepoint</a> <br />
 				<a href="http://mijnrooster.sharepoint.hu.nl">Rooster</a> <br />
 				<a href="http://www.bibliotheek.hu.nl/">Bibliotheek</a> <br />
 				<a href="http://mymail.hu.nl">HU Mail</a> <br />
@@ -72,11 +71,11 @@
 
 			<div class="d1x1">
 				<h1 class="bracket">Games</h1>
-				<a href="http://www.gamersnet.nl/">FOK!Games</a> <br />
 				<a href="http://www.reddit.com/r/pcgaming/">/r/pcgaming</a> <br />
 				<a href="http://www.reddit.com/r/gaming/">/r/gaming</a> <br />
 				<a href="http://www.reddit.com/r/pcmasterrace/">/r/pcmasterrace</a> <br />
 				<a href="http://www.reddit.com/r/games/">/r/games</a> <br />
+				<a href="http://www.reddit.com/r/PS4/">/r/PS4/</a> <br />
 			</div>
 
 			<div class="d1x1">
@@ -91,12 +90,11 @@
 				<a href="http://www.reddit.com/r/hiphopheads">Hiphopheads</a> <br />
 				<a href="http://www.reddit.com/r/movies">Movies</a> <br />
 				<a href="http://www.reddit.com/r/television">Television</a> <br />
-				<a href="http://www.reddit.com/r/shield">Agents of S.H.I.E.L.D.</a> <br />
+				<a href="http://www.reddit.com/r/anime">Anime</a> <br />
 			</div>
 
 			<div class="d1x1">
 				<h1 class="bracket">Misc</h1>
-				<a href="http://www.google.com/">Google</a> <br />
 				<a href="http://www.tweakers.net/pricewatch">Pricewatch</a> <br />
 				<a href="http://www.reddit.com/r/gamedeals/">Gamedeals</a> <br />
 				<a href="http://www.reddit.com/r/buildapcsales/">Buildapcsales</a> <br />
@@ -125,6 +123,7 @@
 				<a href="http://reddit.com/r/gadgets">Gadgets</a> <br />
 				<a href="http://reddit.com/r/androidwear">Android Wear</a> <br />
 				<a href="http://reddit.com/r/android">Android</a> <br />
+				<a href="http://reddit.com/r/Nexus6P">Nexus 6P</a> <br />
 			</div>
 
 			<div class="d2x1">
