--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 				<a href="http://nos.nl/">NOS.nl</a> <br />
 				<a href="http://www.nu.nl/">nu.nl</a> <br />
 				<a href="http://www.tweakers.net/">Tweakers</a> <br />
+				<a href="http://reddit.com/r/thenetherlands">/r/thenetherlands</a> <br />
 				<a href="http://www.reddit.com/r/news">News</a> <br/>
 				<a href="http://www.reddit.com/r/worldnews">Worldnews</a> <br />
 			</div>
@@ -52,12 +53,11 @@
 			</div>
 
 			<div class="d1x1">
-				<h1 class="bracket">Media</h1>
+				<h1><a href="http://www.hu.nl/" class="bracket">Media</a></h1>
 				<a href="https://www.youtube.com/feed/subscriptions/">YouTube</a> <br />
 				<a href="http://www.soundcloud.com/">SoundCloud</a> <br />
 				<a href="https://twitter.com/"> Twitter</a> <br />
-				<a href="http://www.thepiratebay.se/">The Pirate Bay</a> <br />
-				<a href="http://www.kat.cr/">Kickasstorrents
+				<a href="http://www.kat.cr/">Kickasstorrents </a> <br />
 			</div>
 
 			<div class="d1x1">
@@ -112,9 +112,6 @@
 				<h1 class="bracket">Misc</h1>
 				<a href="http://www.reddit.com/r/leagueoflegends">League of Legends</a> <br />
 				<a href="http://reddit.com/r/globaloffensive/">Global Offensive</a> <br />
-				<a href="http://reddit.com/r/killingfloor/">Killing Floor</a> <br />
-				<a href="http://reddit.com/r/grandtheftautov/">GTA V</a> <br />
-				<a href="http://reddit.com/r/grandtheftautov_pc/">GTA V PC</a> <br />
 			</div>
 
 			<div class="d1x1">
