Titel aangepast van site

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<a href="http://nos.nl/">NOS.nl</a> <br />
 				<a href="http://www.nu.nl/">nu.nl</a> <br />
 				<a href="http://www.tweakers.net/">Tweakers</a> <br />
-				<a href="http://reddit.com/r/thenetherlands">/r/thenetherlands</a> <br />
+				<a href="http://www.reddit.com/r/thenetherlands">The Netherlands</a> <br />
 				<a href="http://www.reddit.com/r/news">News</a> <br/>
 				<a href="http://www.reddit.com/r/worldnews">Worldnews</a> <br />
 			</div>
