--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
 			<div class="d1x1">
 				<h1 class="bracket">Misc</h1>
 				<a href="http://www.reddit.com/r/leagueoflegends">League of Legends</a> <br />
-				<a href="http://reddit.com/r/globaloffensive/">Global Offensive</a> <br />
+				<a href="http://www.reddit.com/r/globaloffensive/">Global Offensive</a> <br />
+				<a href="http://www.reddit.com/r/darksouls3/">Dark Souls 3</a> <br />
+				<a href="http://www.reddit.com/r/overwatch/">Overwatch</a> <br />
 			</div>
 
 			<div class="d1x1">
