--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
 				<a href="http://www.tweakers.net/pricewatch">Pricewatch</a> <br />
 				<a href="http://www.reddit.com/r/gamedeals/">Gamedeals</a> <br />
 				<a href="http://www.reddit.com/r/buildapcsales/">Buildapcsales</a> <br />
+				<a href="http://www.reddit.com/r/buildapcsales/new">Buildapcsales NEW</a> <br />
+				<a href="https://www.reddit.com/r/BaPCSalesEurope/new/">BaPCSalesEurope</a> <br />
+				<a href="http://accessories.euro.dell.com/sna/sna.aspx?c=nl&cs=nldhs1&l=nl&s=dhs&~topic=monitor_deals">Dell Monitor Outlet</a> <br />
 			</div>
 
 			<div class="d2x1" id="todo">
@@ -111,8 +114,9 @@
 			<div class="d1x1">
 				<h1 class="bracket">Misc</h1>
 				<a href="http://www.reddit.com/r/leagueoflegends">League of Legends</a> <br />
+				<a href="http://www.reddit.com/r/overwatch">Overwatch</a> <br />
+				<a href="http://www.reddit.com/r/2007scape">2007scape</a> <br />
 				<a href="http://www.reddit.com/r/globaloffensive/">Global Offensive</a> <br />
-				<a href="http://www.reddit.com/r/darksouls3/">Dark Souls 3</a> <br />
 			</div>
 
 			<div class="d1x1">
