Nieuwe background image + sites aangepast

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 				<a href="http://www.reddit.com/r/movies">Movies</a> <br />
 				<a href="http://www.reddit.com/r/television">Television</a> <br />
 				<a href="http://www.reddit.com/r/anime">Anime</a> <br />
+				<a href="http://www.reddit.com/r/livestreamfail">Livestreamfail</a> <br />
 			</div>
 
 			<div class="d1x1">
@@ -98,9 +99,7 @@
 				<a href="http://www.tweakers.net/pricewatch">Pricewatch</a> <br />
 				<a href="http://www.reddit.com/r/gamedeals/">Gamedeals</a> <br />
 				<a href="http://www.reddit.com/r/buildapcsales/">Buildapcsales</a> <br />
-				<a href="http://www.reddit.com/r/buildapcsales/new">Buildapcsales NEW</a> <br />
 				<a href="https://www.reddit.com/r/BaPCSalesEurope/new/">BaPCSalesEurope</a> <br />
-				<a href="http://accessories.euro.dell.com/sna/sna.aspx?c=nl&cs=nldhs1&l=nl&s=dhs&~topic=monitor_deals">Dell Monitor Outlet</a> <br />
 			</div>
 
 			<div class="d2x1" id="todo">
@@ -113,10 +112,12 @@
 
 			<div class="d1x1">
 				<h1 class="bracket">Misc</h1>
-				<a href="http://www.reddit.com/r/leagueoflegends">League of Legends</a> <br />
 				<a href="http://www.reddit.com/r/overwatch">Overwatch</a> <br />
 				<a href="http://www.reddit.com/r/2007scape">2007scape</a> <br />
 				<a href="http://www.reddit.com/r/globaloffensive/">Global Offensive</a> <br />
+				<a href="http://www.reddit.com/r/hitman/">Hitman</a> <br />
+				<a href="http://www.reddit.com/r/titanfall">Titanfall</a> <br />
+				
 			</div>
 
 			<div class="d1x1">
@@ -124,8 +125,8 @@
 				<a href="http://reddit.com/r/technology">Technology</a> <br />
 				<a href="http://reddit.com/r/gadgets">Gadgets</a> <br />
 				<a href="http://reddit.com/r/androidwear">Android Wear</a> <br />
-				<a href="http://reddit.com/r/android">Android</a> <br />
 				<a href="http://reddit.com/r/Nexus6P">Nexus 6P</a> <br />
+				<a href="http://reddit.com/r/android">Android</a> <br />
 			</div>
 
 			<div class="d2x1">
@@ -149,7 +150,7 @@
 				document.querySelector('.bg').classList.add(bgd);
 			}
 			else {
-				var bgn = [ 'bgn1', 'bgn2', 'bgn3', 'bgn4', 'bgn5', 'bgn6', 'bgn7', 'bgn8', 'bgn9', 'bgn10', 'bgn11', 'bgn12', 'bgn13', 'bgn14', 'bgn15' ];
+				var bgn = [ 'bgn1', 'bgn2', 'bgn3', 'bgn4', 'bgn5', 'bgn6', 'bgn7', 'bgn8', 'bgn9', 'bgn10', 'bgn11', 'bgn12', 'bgn13', 'bgn14', 'bgn15', 'bgn16' ];
 				var bgn = bgn[Math.floor(Math.random() * bgn.length)];
 				document.querySelector('.bg').classList.add(bgn);
 			}
