--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
 			var date = new Date();
 			var hour = date.getHours();
 			if (hour>6 && hour<18) {
-				var bgd = [ 'bgd1', 'bgd2', 'bgd3', 'bgd4', 'bgd5', 'bgd6', 'bgd7', 'bgd8', 'bgd9', 'bgd10', 'bgd11', 'bgd12', 'bgd13', 'bgd14', 'bgd15', 'bgd16', 'bgd17' ]
+				var bgd = ['bgd1', 'bgd2', 'bgd3', 'bgd4', 'bgd5', 'bgd6', 'bgd7', 'bgd8', 'bgd9', 'bgd10', 'bgd11', 'bgd12', 'bgd13', 'bgd14', 'bgd15', 'bgd16' ]
 				var bgd = bgd[Math.floor(Math.random() * bgd.length)];
 				document.querySelector('.bg').classList.add(bgd);
 			}
 			else {
-				var bgn = [ 'bgn1', 'bgn2', 'bgn3', 'bgn4', 'bgn5', 'bgn6', 'bgn7', 'bgn8', 'bgn9', 'bgn10', 'bgn11', 'bgn12', 'bgn13', 'bgn14', 'bgn15', 'bgn16', 'bgn17', 'bgn18', 'bgn19', 'bgn20', 'bgn21', 'bgn22' ];
+				var bgn = [ 'bgn1', 'bgn2', 'bgn3', 'bgn4', 'bgn5', 'bgn6', 'bgn7', 'bgn8', 'bgn9', 'bgn10', 'bgn11', 'bgn12', 'bgn13', 'bgn14', 'bgn15', 'bgn16', 'bgn17', 'bgn18', 'bgn19', 'bgn20'];
 				var bgn = bgn[Math.floor(Math.random() * bgn.length)];
 				document.querySelector('.bg').classList.add(bgn);
 			}
