Subreddit vervangen + volgorde veranderd

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 
 			<div class="d1x1">
 				<h1 class="bracket">Games</h1>
-				<a href="http://www.reddit.com/r/pcgaming/">/r/pcgaming</a> <br />
 				<a href="http://www.reddit.com/r/gaming/">/r/gaming</a> <br />
+				<a href="http://www.reddit.com/r/PS4/">/r/PS4/</a> <br />
 				<a href="http://www.reddit.com/r/pcmasterrace/">/r/pcmasterrace</a> <br />
 				<a href="http://www.reddit.com/r/games/">/r/games</a> <br />
-				<a href="http://www.reddit.com/r/PS4/">/r/PS4/</a> <br />
+				<a href="http://www.reddit.com/r/pcgaming/">/r/pcgaming</a> <br />
 			</div>
 
 			<div class="d1x1">
@@ -116,7 +116,7 @@
 				<a href="http://www.reddit.com/r/2007scape">2007scape</a> <br />
 				<a href="http://www.reddit.com/r/globaloffensive/">Global Offensive</a> <br />
 				<a href="http://www.reddit.com/r/hitman/">Hitman</a> <br />
-				<a href="http://www.reddit.com/r/titanfall">Titanfall</a> <br />
+				<a href="http://www.reddit.com/r/rainbow6">Rainbow 6</a> <br />
 				
 			</div>
 
