--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
 			<div class="d1x1">
 				<h1 class="bracket">News</h1>
 				<a href="http://nos.nl/">NOS.nl</a> <br />
-				<a href="http://www.nu.nl/">nu.nl</a> <br />
 				<a href="http://www.tweakers.net/">Tweakers</a> <br />
+				<a href="http://www.dsogaming.com/">DSOGaming</a> <br />
 				<a href="http://www.reddit.com/r/thenetherlands">The Netherlands</a> <br />
 				<a href="http://www.reddit.com/r/news">News</a> <br/>
 				<a href="http://www.reddit.com/r/worldnews">Worldnews</a> <br />
 			</div>
 
 			<div class="d1x1">
-				<h1><a href="http://www.4chan.org/" class="bracket">4chan</a></h1>
+				<h1 class="bracket">4chan</h1>
 				<a href="http://boards.4chan.org/v/">/v/ - The Vidya</a> <br />
 				<a href="http://boards.4chan.org/vg/">/vg/ - Video Game Generals</a> <br />
 				<a href="http://boards.4chan.org/g/">/g/ - Tech Support</a> <br />
 			</div>
 
 			<div class="d1x1">
-				<h1><a href="http://www.hu.nl/" class="bracket">Media</a></h1>
+				<h1 class="bracket">Media</h1>
 				<a href="https://www.youtube.com/feed/subscriptions/">YouTube</a> <br />
 				<a href="http://www.soundcloud.com/">SoundCloud</a> <br />
 				<a href="https://twitter.com/"> Twitter</a> <br />
@@ -61,7 +61,7 @@
 			</div>
 
 			<div class="d1x1">
-				<h1 class="bracket">HU</h1>
+				<h1><a href="http://www.hu.nl/" class="bracket">HU</h1>
 				<a href="https://mijn.sharepoint.hu.nl/Paginas/default.aspx">Sharepoint</a> <br />
 				<a href="http://mijnrooster.sharepoint.hu.nl">Rooster</a> <br />
 				<a href="http://www.bibliotheek.hu.nl/">Bibliotheek</a> <br />
