--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</div>
 
 			<div class="d1x1">
-				<h1><a href="http://www.4chan.org/" class="bracket">4chan</a></h1>
+				<h1><a href="http://www.4chan.org/" class="bracket"></a></h1>
 				<a href="http://boards.4chan.org/v/">/v/ - The Vidya</a> <br />
 				<a href="http://boards.4chan.org/vg/">/vg/ - Video Game Generals</a> <br />
 				<a href="http://boards.4chan.org/g/">/g/ - Tech Support</a> <br />
@@ -57,7 +57,6 @@
 				<a href="https://www.youtube.com/feed/subscriptions/">YouTube</a> <br />
 				<a href="http://www.soundcloud.com/">SoundCloud</a> <br />
 				<a href="https://twitter.com/"> Twitter</a> <br />
-				<a href="http://www.kat.cr/">Kickasstorrents </a> <br />
 			</div>
 
 			<div class="d1x1">
@@ -100,6 +99,7 @@
 				<a href="http://www.reddit.com/r/gamedeals/">Gamedeals</a> <br />
 				<a href="http://www.reddit.com/r/buildapcsales/">Buildapcsales</a> <br />
 				<a href="https://www.reddit.com/r/BaPCSalesEurope/new/">BaPCSalesEurope</a> <br />
+				<a href="https://www.reddit.com/r/crackwatch">CrackWatch</a> <br />
 			</div>
 
 			<div class="d2x1" id="todo">
@@ -117,6 +117,7 @@
 				<a href="http://www.reddit.com/r/globaloffensive/">Global Offensive</a> <br />
 				<a href="http://www.reddit.com/r/hitman/">Hitman</a> <br />
 				<a href="http://www.reddit.com/r/rainbow6">Rainbow 6</a> <br />
+				<a href="http://www.reddit.com/r/pubattlegrounds">PUBG</a> <br />
 				
 			</div>
 
