--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			</div>
 
 			<div class="d1x1">
-				<h1 class="bracket">Misc</h1>
+				<h1 class="bracket">Media</h1>
 				<a href="http://www.reddit.com/r/music/">Music</a> <br />
 				<a href="http://www.reddit.com/r/hiphopheads">Hiphopheads</a> <br />
 				<a href="http://www.reddit.com/r/movies">Movies</a> <br />
@@ -94,7 +94,7 @@
 			</div>
 
 			<div class="d1x1">
-				<h1 class="bracket">Misc</h1>
+				<h1 class="bracket">Sales</h1>
 				<a href="http://www.tweakers.net/pricewatch">Pricewatch</a> <br />
 				<a href="http://www.reddit.com/r/gamedeals/">Gamedeals</a> <br />
 				<a href="http://www.reddit.com/r/buildapcsales/">Buildapcsales</a> <br />
@@ -111,7 +111,7 @@
 			</div>
 
 			<div class="d1x1">
-				<h1 class="bracket">Misc</h1>
+				<h1 class="bracket">Games</h1>
 				<a href="http://www.reddit.com/r/overwatch">Overwatch</a> <br />
 				<a href="http://www.reddit.com/r/2007scape">2007scape</a> <br />
 				<a href="http://www.reddit.com/r/globaloffensive/">Global Offensive</a> <br />
@@ -127,12 +127,12 @@
 				<a href="http://reddit.com/r/gadgets">Gadgets</a> <br />
 				<a href="http://reddit.com/r/androidwear">Android Wear</a> <br />
 				<a href="http://reddit.com/r/Nexus6P">Nexus 6P</a> <br />
+				<a href="http://reddit.com/r/LGG6">LG G6</a> <br />
 				<a href="http://reddit.com/r/android">Android</a> <br />
 			</div>
 
-			<div class="d2x1">
-				<h1><a href="http://m.nos.nl/" class="bracket">NOS Nieuws</a></h1>
-				<div class="d2x1Child" id="nos"></div>
+			<div class="d1x1">
+				<h1 class="bracket">Misc</h1>
 			</div>
 
 			<div class="d2x1">
