--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
 			<div class="d1x1">
 				<h1 class="bracket">Misc</h1>
 			</div>
+			
+			<div class="d1x1">
+				<h1 class="bracket">Misc</h1>
+			</div>
 
 			<div class="d2x1">
 				<h1><a href="http://www.tweakers.net/" class="bracket">Tweakers</a></h1>
