--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 			<div class="d1x1">
 				<h1 class="bracket">Mail</h1>
 				<a href="http://mail.google.com">Gmail</a> <br />
+				<a href="https://protonmail.com">Protonmail</a> <br />
 				<a href="https://outlook.com">Outlook</a> <br />
 			</div>
 
