--- a/index.html
+++ b/index.html
@@ -86,11 +86,12 @@
 
 			<div class="d1x1">
 				<h1 class="bracket">Media</h1>
-				<a href="http://www.reddit.com/r/music/">Music</a> <br />
 				<a href="http://www.reddit.com/r/hiphopheads">Hiphopheads</a> <br />
 				<a href="http://www.reddit.com/r/movies">Movies</a> <br />
+				<a href="http://www.reddit.com/r/marvelstudios">MarvelStudios</a> <br />
 				<a href="http://www.reddit.com/r/television">Television</a> <br />
 				<a href="http://www.reddit.com/r/anime">Anime</a> <br />
+				<a href="http://www.reddit.com/r/manga">Manga</a> <br />
 				<a href="http://www.reddit.com/r/livestreamfail">Livestreamfail</a> <br />
 			</div>
 
@@ -113,10 +114,8 @@
 
 			<div class="d1x1">
 				<h1 class="bracket">Games</h1>
-				<a href="http://www.reddit.com/r/overwatch">Overwatch</a> <br />
-				<a href="http://www.reddit.com/r/2007scape">2007scape</a> <br />
-				<a href="http://www.reddit.com/r/globaloffensive/">Global Offensive</a> <br />
 				<a href="http://www.reddit.com/r/hitman/">Hitman</a> <br />
+				<a href="http://www.reddit.com/r/2007scape">2007scape</a> <br />
 				<a href="http://www.reddit.com/r/rainbow6">Rainbow 6</a> <br />
 				<a href="http://www.reddit.com/r/pubattlegrounds">PUBG</a> <br />
 				
@@ -125,10 +124,8 @@
 			<div class="d1x1">
 				<h1 class="bracket">Technology</h1>
 				<a href="http://reddit.com/r/technology">Technology</a> <br />
-				<a href="http://reddit.com/r/gadgets">Gadgets</a> <br />
-				<a href="http://reddit.com/r/androidwear">Android Wear</a> <br />
-				<a href="http://reddit.com/r/Nexus6P">Nexus 6P</a> <br />
-				<a href="http://reddit.com/r/LGG6">LG G6</a> <br />
+				<a href="http://reddit.com/r/hardware">Hardware</a> <br />
+				<a href="http://reddit.com/r/oneplus">Oneplus</a> <br />
 				<a href="http://reddit.com/r/android">Android</a> <br />
 			</div>
 
