--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 
 			<div class="d1x1">
 				<h1 class="bracket">Games</h1>
-				<a href="http://www.reddit.com/r/gaming/">/r/gaming</a> <br />
 				<a href="http://www.reddit.com/r/PS4/">/r/PS4/</a> <br />
-				<a href="http://www.reddit.com/r/pcmasterrace/">/r/pcmasterrace</a> <br />
 				<a href="http://www.reddit.com/r/games/">/r/games</a> <br />
 				<a href="http://www.reddit.com/r/pcgaming/">/r/pcgaming</a> <br />
+				<a href="http://www.reddit.com/r/oculus/">/r/oculus</a> <br />
+				<a href="http://www.reddit.com/r/vive/">/r/vive</a> <br />
 			</div>
 
 			<div class="d1x1">
@@ -98,8 +98,8 @@
 				<h1 class="bracket">Sales</h1>
 				<a href="http://www.tweakers.net/pricewatch">Pricewatch</a> <br />
 				<a href="http://www.reddit.com/r/gamedeals/">Gamedeals</a> <br />
+				<a href="http://www.reddit.com/r/PS4Deals/">PS4Deals</a> <br />
 				<a href="http://www.reddit.com/r/buildapcsales/">Buildapcsales</a> <br />
-				<a href="https://www.reddit.com/r/BaPCSalesEurope/new/">BaPCSalesEurope</a> <br />
 				<a href="https://www.reddit.com/r/crackwatch">CrackWatch</a> <br />
 			</div>
 
@@ -113,18 +113,18 @@
 
 			<div class="d1x1">
 				<h1 class="bracket">Games</h1>
-				<a href="http://www.reddit.com/r/hitman/">Hitman</a> <br />
 				<a href="http://www.reddit.com/r/2007scape">2007scape</a> <br />
 				<a href="http://www.reddit.com/r/rainbow6">Rainbow 6</a> <br />
 				<a href="http://www.reddit.com/r/pubattlegrounds">PUBG</a> <br />
-				
+				<a href="http://www.reddit.com/r/escapefromtarkov">Tarkov</a> <br />
+				<a href="http://www.reddit.com/r/CODWarzone">Warzone</a> <br />
 			</div>
 
 			<div class="d1x1">
 				<h1 class="bracket">Technology</h1>
 				<a href="http://reddit.com/r/technology">Technology</a> <br />
 				<a href="http://reddit.com/r/hardware">Hardware</a> <br />
-				<a href="http://reddit.com/r/oneplus">Oneplus</a> <br />
+				<a href="http://reddit.com/r/samsung">Samsung</a> <br />
 				<a href="http://reddit.com/r/android">Android</a> <br />
 			</div>
 
