--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 				<h1 class="bracket">Technology</h1>
 				<a href="http://reddit.com/r/technology">Technology</a> <br />
 				<a href="http://reddit.com/r/hardware">Hardware</a> <br />
+				<a href="http://reddit.com/r/oneplus">OnePlus</a> <br />
 				<a href="http://reddit.com/r/android">Android</a> <br />
 			</div>
 
