Change /r/anime to No Fanart link

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<a href="http://www.reddit.com/r/hiphopheads">Hiphopheads</a> <br />
 				<a href="http://www.reddit.com/r/movies">Movies</a> <br />
 				<a href="http://www.reddit.com/r/television">Television</a> <br />
-				<a href="http://www.reddit.com/r/anime">Anime</a> <br />
+				<a href="https://xf.reddit.com/r/anime">Anime</a> <br />
 				<a href="http://www.reddit.com/r/manga">Manga</a> <br />
 				<a href="http://www.reddit.com/r/livestreamfail">Livestreamfail</a> <br />
 			</div>
