Changed some sites

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 				<h1 class="bracket">Games</h1>
 				<a href="http://www.reddit.com/r/oculus/">/r/oculus</a> <br />
 				<a href="http://www.reddit.com/r/PS4/">/r/PS4/</a> <br />
+				<a href="http://www.reddit.com/r/PS5/">/r/PS5/</a> <br />
 				<a href="http://www.reddit.com/r/games/">/r/games</a> <br />
 				<a href="http://www.reddit.com/r/pcgaming/">/r/pcgaming</a> <br />
 			</div>
@@ -116,6 +117,7 @@
 				<a href="http://www.reddit.com/r/rainbow6">Rainbow 6</a> <br />
 				<a href="http://www.reddit.com/r/pubattlegrounds">PUBG</a> <br />
 				<a href="http://www.reddit.com/r/escapefromtarkov">Tarkov</a> <br />
+				<a href="http://www.reddit.com/r/modernwarfare">ModernWarfare</a> <br />
 				<a href="http://www.reddit.com/r/CODWarzone">Warzone</a> <br />
 			</div>
 
@@ -123,7 +125,9 @@
 				<h1 class="bracket">Technology</h1>
 				<a href="http://reddit.com/r/technology">Technology</a> <br />
 				<a href="http://reddit.com/r/hardware">Hardware</a> <br />
-				<a href="http://reddit.com/r/oneplus">OnePlus</a> <br />
+				<a href="http://reddit.com/r/amd">AMD</a> <br />
+				<a href="http://reddit.com/r/nvidia">Nvidia</a> <br />
+				<a href="http://reddit.com/r/sonyxperia">Sony Xperia</a> <br />
 				<a href="http://reddit.com/r/android">Android</a> <br />
 			</div>
 
