--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				<h1 class="bracket">Games</h1>
 				<a href="http://www.reddit.com/r/2007scape">2007scape</a> <br />
 				<a href="http://www.reddit.com/r/rainbow6">Rainbow 6</a> <br />
-				<a href="http://www.reddit.com/r/pubattlegrounds">PUBG</a> <br />
+				<a href="http://www.reddit.com/r/apexlegends">PUBG</a> <br />
 				<a href="http://www.reddit.com/r/escapefromtarkov">Tarkov</a> <br />
 				<a href="http://www.reddit.com/r/modernwarfare">ModernWarfare</a> <br />
 				<a href="http://www.reddit.com/r/CODWarzone">Warzone</a> <br />
