--- a/index.html
+++ b/index.html
@@ -53,19 +53,13 @@
 			</div>
 
 			<div class="d1x1">
-				<h1><a href="http://www.hu.nl/" class="bracket">Media</a></h1>
-				<a href="https://www.youtube.com/feed/subscriptions/">YouTube</a> <br />
-				<a href="http://www.soundcloud.com/">SoundCloud</a> <br />
-				<a href="https://twitter.com/"> Twitter</a> <br />
+				<h1><a href="" class="bracket"></a></h1>
+				<a href=""></a> <br />
 			</div>
 
 			<div class="d1x1">
-				<h1 class="bracket">HU</h1>
-				<a href="https://mijn.sharepoint.hu.nl/Paginas/default.aspx">Sharepoint</a> <br />
-				<a href="http://mijnrooster.sharepoint.hu.nl">Rooster</a> <br />
-				<a href="http://www.bibliotheek.hu.nl/">Bibliotheek</a> <br />
-				<a href="http://mymail.hu.nl">HU Mail</a> <br />
-				<a href="https://www.osiris.hu.nl/osiris-student/LoginDirect.do">Osiris</a> <br />
+				<h1 class="bracket"></h1>
+				<a href=""></a> <br />
 			</div>
 
 			<div class="d1x1">
@@ -115,10 +109,10 @@
 				<h1 class="bracket">Games</h1>
 				<a href="http://www.reddit.com/r/2007scape">2007scape</a> <br />
 				<a href="http://www.reddit.com/r/rainbow6">Rainbow 6</a> <br />
-				<a href="http://www.reddit.com/r/apexlegends">PUBG</a> <br />
-				<a href="http://www.reddit.com/r/escapefromtarkov">Tarkov</a> <br />
 				<a href="http://www.reddit.com/r/modernwarfare">ModernWarfare</a> <br />
 				<a href="http://www.reddit.com/r/CODWarzone">Warzone</a> <br />
+				<a href="http://www.reddit.com/r/apexlegends">Apex Legends</a> <br />
+				<a href="http://www.reddit.com/r/escapefromtarkov">Tarkov</a> <br />
 			</div>
 
 			<div class="d1x1">
@@ -132,16 +126,15 @@
 			</div>
 
 			<div class="d1x1">
-				<h1 class="bracket">Misc</h1>
+				<h1 class="bracket"></h1>
 			</div>
 			
 			<div class="d1x1">
-				<h1 class="bracket">Misc</h1>
+				<h1 class="bracket"></h1>
 			</div>
 
 			<div class="d2x1">
-				<h1><a href="http://www.tweakers.net/" class="bracket">Tweakers</a></h1>
-				<div class="d2x1Child" id="tweakers"></div>
+				<h1><a href="" class="bracket"></a></h1>
 			</div>
 		</div>
 		<div id="bottom-margin"></div>
